Bug 351443 - kate ask about file reload (changed outside) when exiting
Summary: kate ask about file reload (changed outside) when exiting
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.13.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 366496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-18 13:38 UTC by Alexey
Modified: 2019-03-05 03:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey 2015-08-18 13:38:40 UTC
When I open files in 2 editors and edited some file outside of kate, unfocused kate asks me about "reload changed file" just after atempt to close it.

Reproducible: Always

Steps to Reproduce:
1. Open 2-3 files with kate in one session. Let's name them "first" and "second"
2. Select file "second" as current in kate
3. Minimize kate to system tray
4. Open and edit "first" from previous steps in qtcreator (for example)
5. Try to close kate from try (right click on ico and pick "Close")


Actual Results:  
Kate asks in blocking dialog about reloading file "first"

Expected Results:  
Exit without asking (file was not edited since last time in kate, so there is no info to lose)
Comment 1 Christoph Feck 2016-08-14 11:36:45 UTC
*** Bug 366496 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Cullmann 2019-03-04 18:53:13 UTC
Git commit 0c15edfbd44fc8b094769b546546ff7a9484cdf2 by Christoph Cullmann, on behalf of loh tar.
Committed on 04/03/2019 at 18:54.
Pushed by cullmann into branch 'master'.

[RFC] Defuse KateMainWindow::showModOnDiskPrompt

Summary:
Related: bug 375725, bug 375725

Test Plan:
Fixed in a way as suggested in bug report.

  Expected Results:
  Exit without asking (file was not edited since last time in kate, so there is no info to lose)

This dialog is for me pretty confusing and annoying.
- In which case may that question (without this patch) useful?
- Why should I reload a file when I like to close Kate?
- Click "Ignore" you will asked again, where you can overwrite the file on disk. The opposite from your first intend.
- Click "Diff" keeps the dialog the focus with the result that you can't scroll in the loaded diff. With dark theme is it hard to read too
- You can end in some "endless" dialog boxes

So, how about to remove that dialog?
{F6643583}

Reviewers: #kate, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, ngraham, kwrite-devel, #kate

Tags: #kate

Differential Revision: https://phabricator.kde.org/D19397

M  +2    -1    kate/katemainwindow.cpp

https://commits.kde.org/kate/0c15edfbd44fc8b094769b546546ff7a9484cdf2