[RFC] Defuse KateMainWindow::showModOnDiskPrompt

Summary:
BUG:351443
BUG:375725

Test Plan:
Fixed in a way as suggested in bug report.

  Expected Results:
  Exit without asking (file was not edited since last time in kate, so there is no info to lose)

This dialog is for me pretty confusing and annoying.
- In which case may that question (without this patch) useful?
- Why should I reload a file when I like to close Kate?
- Click "Ignore" you will asked again, where you can overwrite the file on disk. The opposite from your first intend.
- Click "Diff" keeps the dialog the focus with the result that you can't scroll in the loaded diff. With dark theme is it hard to read too
- You can end in some "endless" dialog boxes

So, how about to remove that dialog?
{F6643583}

BUG:375725 Same issue, different request

Reviewers: #kate, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, ngraham, kwrite-devel, #kate

Tags: #kate

Differential Revision: https://phabricator.kde.org/D19397